@@ -1,3 +1,6 @@
+Fredrik Bergholtz - Sat Jan 22 2005
+	added exhaust vapour to Steroids ship
+
 Courtney Cavin - Sat Jan 22 2005
 	.jpeg; .pnm; and .xcf extentions now open
 	fixed about, the scrolling was a little funky/incorrect
